Resolves: tdf#168870 scrolling input win doesn't redraw

since:

commit ec4da4667d7f948219d51daaf21cda8d5cd2f4ad
Date:   Wed Aug 13 19:45:13 2025 +0200

    OutlinerView: Rework for standard selection visualization

Change-Id: Id3a7c473f024d12bb61fbe3c2a4f3939df274689
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192775
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>